docs/grammar.ebnf
(* AICore frozen grammar artifact *)
(* Version: mvp-grammar-v6 *)
(* Source contract: docs/syntax.md *)

ident          = letter (letter | digit)* ;
int            = digit+ ;
float          = digit+ "." digit+ exponent?
               | digit+ exponent ;
exponent       = ("e" | "E") ("+" | "-")? digit+ ;
string         = "\"" string_char* "\"" ;
bool           = "true" | "false" ;

letter         = "A".."Z" | "a".."z" | "_" ;
digit          = "0".."9" ;
string_char    = ? any UTF-8 code point or escape sequence accepted by lexer ? ;

program        = module_decl? import_decl* item* EOF ;
module_decl    = "module" path ";" ;
import_decl    = "import" path ";" ;
path           = ident ("." ident)* ;

item           = fn_decl | struct_decl | enum_decl | trait_decl | impl_decl ;

fn_decl        = async_prefix? "fn" ident generics? "(" params? ")" "->" type
                 effects? contracts? block ;
async_prefix   = "async" ;
effects        = "effects" "{" effect_list? "}" ;
effect_list    = ident ("," ident)* ","? ;
contracts      = (requires_clause | ensures_clause)* ;
requires_clause = "requires" expr ;
ensures_clause  = "ensures" expr ;

struct_decl    = "struct" ident generics? "{" fields? "}" invariant_clause? ;
invariant_clause = "invariant" expr ;

enum_decl      = "enum" ident generics? "{" variants? "}" ;
variants       = variant ("," variant)* ","? ;
variant        = ident ("(" type ")")? ;

trait_decl     = "trait" ident generics? ";" ;
impl_decl      = "impl" ident "[" type ("," type)* ","? "]" ";" ;

generics       = "[" generic_param ("," generic_param)* ","? "]" ;
generic_param  = ident trait_bounds? ;
trait_bounds   = ":" ident ("+" ident)* ;
params         = param ("," param)* ","? ;
param          = ident ":" type ;
fields         = field ("," field)* ","? ;
field          = ident ":" type ;

type           = unit_type | named_type ;
unit_type      = "(" ")" ;
named_type     = type_name type_args? ;
type_name      = ident ("::" ident)* ;
type_args      = "[" type ("," type)* ","? "]" ;

block          = "{" stmt* tail_expr? "}" ;
tail_expr      = expr ;

stmt           = let_stmt | assign_stmt | return_stmt | expr_stmt ;
let_stmt       = "let" "mut"? ident (":" type)? "=" expr ";" ;
assign_stmt    = ident "=" expr ";" ;
return_stmt    = "return" expr? ";" ;
expr_stmt      = expr ";" ;

expr           = or_expr ;
or_expr        = and_expr ("||" and_expr)* ;
and_expr       = equality_expr ("&&" equality_expr)* ;
equality_expr  = compare_expr (("==" | "!=") compare_expr)* ;
compare_expr   = term_expr (("<" | "<=" | ">" | ">=") term_expr)* ;
term_expr      = factor_expr (("+" | "-") factor_expr)* ;
factor_expr    = unary_expr (("*" | "/" | "%") unary_expr)* ;
unary_expr     = ("await" | "-" | "!" | borrow_prefix) unary_expr | postfix_expr ;
borrow_prefix  = "&" "mut"? ;

postfix_expr   = primary_expr (call_suffix | field_suffix | try_suffix)* ;
call_suffix    = "(" arg_list? ")" ;
arg_list       = expr ("," expr)* ","? ;
field_suffix   = "." ident ;
try_suffix     = "?" ;

primary_expr   = int
               | float
               | string
               | bool
               | unit_lit
               | ident
               | struct_init
               | grouped_expr
               | if_expr
               | match_expr ;

grouped_expr   = "(" expr ")" ;
unit_lit       = "(" ")" ;

if_expr        = "if" expr block "else" (block | if_expr) ;
match_expr     = "match" expr "{" match_arms? "}" ;
match_arms     = match_arm ("," match_arm)* ","? ;
match_arm      = pattern guard_clause? "=>" expr ;
guard_clause   = "if" expr ;

struct_init    = ident "{" struct_init_fields? "}" ;
struct_init_fields = struct_init_field ("," struct_init_field)* ","? ;
struct_init_field = ident ":" expr ;

pattern        = or_pattern ;
or_pattern     = pattern_atom ("|" pattern_atom)* ;
pattern_atom   = "_"
               | ident_pattern
               | int
               | bool
               | unit_pattern
               | variant_pattern ;

unit_pattern   = "(" ")" ;
ident_pattern  = ident ;
variant_pattern = ident ("(" pattern ("," pattern)* ","? ")")? ;
